[gd_scene load_steps=7 format=3 uid="uid://65bnda8bhlql"]

[ext_resource type="Texture2D" uid="uid://cewbgc80w2j62" path="res://assets/Upside-Down Face Emoji.png" id="1_a82jb"]
[ext_resource type="Script" path="res://player/player.gd" id="1_u3rxg"]
[ext_resource type="Texture2D" uid="uid://cbahhg4caah5x" path="res://assets/PlayerShield.png" id="3_2d4k7"]
[ext_resource type="Script" path="res://player/Shield.gd" id="3_4n1oq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4s8d5"]
radius = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_84g82"]
radius = 50.01

[node name="player" type="Area2D"]
script = ExtResource("1_u3rxg")
SHEILD_ENABLED = false
metadata/_edit_horizontal_guides_ = [-20.0, -25.0, -50.0, -40.0]
metadata/_edit_vertical_guides_ = [-20.0, -25.0, -50.0, -40.0]

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_a82jb")

[node name="PlayerHurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4s8d5")

[node name="Shield" type="Area2D" parent="." groups=["enemy_hurter"]]
visible = false
script = ExtResource("3_4n1oq")

[node name="ShieldSprite" type="Sprite2D" parent="Shield"]
scale = Vector2(0.283333, 0.283333)
texture = ExtResource("3_2d4k7")

[node name="ShieldHitbox" type="CollisionShape2D" parent="Shield"]
shape = SubResource("CircleShape2D_84g82")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Shield" to="Shield" method="_on_area_entered"]
